# KnowledgeLM

./: .coverage  .gitignore  .gitmodules  FilingsDownloader.py  GOLDEN_TAXONOMY_HANDOFF.md  LICENSE  PUBLISHING.md  README.md  app.py  benchmark_forum.py  check_harvester_v2.py  pyproject.toml  requirements.txt
.agent/: README.md
.agent/skills/knowledgelm-nse/: SKILL.md
.context/: ARCHITECTURE.md  CHANGELOG.md  CONVENTIONS.md  DESIGN.md  OVERVIEW.md  README.md  implementation_plan.md  task.md
.github/workflows/: publish_pypi.yml
.taxonomies/fundRaising/Alteration_Of_Capital_And_Fund_Raising/: in-capmkt-def-2023-12-31.xml
.taxonomies/shm/core/: in-capmkt.xsd
src/knowledgelm/: __init__.py  app.py  cli.py  config.py
src/knowledgelm/core/: forum.py  pdf_parser.py  service.py  taxonomy_manager.py  xbrl_harvester.py
src/knowledgelm/data/: SKILL.md  nse_adapter.py  screener_adapter.py
src/knowledgelm/utils/: file_utils.py  log_utils.py  text_utils.py
src/knowledgelm/xbrl_mapping_bundle/: Ann-format.js  Ann-xbrl.js  README.md  generate_mappings.js  xbrl_labels.json
tests/: conftest.py  test_cli.py  test_forum.py  test_nse_adapter.py  test_placeholder.py  test_screener_adapter.py  test_security_zip_slip.py  test_service.py  test_utils.py  test_xbrl_arelle.py  test_xbrl_harvester.py
