[project]
name = "knowledgelm"
version = "4.2.1"
description = "A NotebookLM companion for batch downloading NSE company announcements"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "streamlit",
    "pandas",
    "nse",
    "requests",
    "beautifulsoup4",
    "selenium>=4.40.0",
    "click>=8.1.0",
]

authors = [
    { name = "eggmasonvalue" }
]

keywords = ["nse", "india", "stocks", "notebooklm", "fundamental-analysis", "investor-tools"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

[project.urls]
Homepage = "https://github.com/eggmasonvalue/KnowledgeLM"
Repository = "https://github.com/eggmasonvalue/KnowledgeLM"
Issues = "https://github.com/eggmasonvalue/KnowledgeLM/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
]

[project.scripts]
knowledgelm = "knowledgelm.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/knowledgelm"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
]
ignore = [
    "D100", # Missing docstring in public module (handled separately)
    "D104", # Missing docstring in public package
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
